# Visualiza

./: .env.example  .gitignore  .vercelignore  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
.devcontainer/: devcontainer.json
app/composables/: useBreakpoint.ts  useFavorites.ts  useFormatPrice.ts  useProducts.ts  useVisualizer.ts
app/layouts/: default.vue  visualizer.vue
app/pages/: about.vue  favorites.vue  index.vue
app/stores/: catalog.ts  ui.ts  visualizer.ts
app/types/: index.ts  product.ts  property.ts  visualizer.ts
app/utils/: formatPrice.ts  imageHelpers.ts
public/: manifest.webmanifest
server/data/: products.json
visualisa-platform/: .env.example  docker-compose.yml
visualisa-platform/admin/: Dockerfile  nuxt.config.ts  package.json
visualisa-platform/backend/: alembic.ini  pyproject.toml
visualisa-platform/backend/alembic/: env.py
visualisa-platform/backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
visualisa-platform/backend/app/api/public/: __init__.py
visualisa-platform/backend/app/api/v1/: auth.py  billing.py  bom.py  crawler.py  products.py  professional.py  router.py
visualisa-platform/backend/app/core/: exceptions.py  middleware.py  permissions.py  security.py
visualisa-platform/backend/app/crawler/: base.py  ochoa.py  pipeline.py  scheduler.py  tasks.py
visualisa-platform/backend/app/models/: __init__.py  billing.py  bom.py  crawler.py  product.py  user.py  visualizer.py
visualisa-platform/backend/app/schemas/: auth.py  billing.py  crawler.py  widget.py
visualisa-platform/backend/app/services/: auth_service.py  billing_service.py  bom_service.py  widget_service.py
visualisa-platform/backend/app/utils/: currency.py  pagination.py
visualisa-platform/backend/scripts/: seed_data.py
visualisa-platform/backend/tests/: conftest.py  test_auth.py  test_billing.py  test_bom.py  test_products.py  test_widget.py
visualisa-platform/portal/: Dockerfile  nuxt.config.ts  package.json
visualisa-platform/widget/: package.json  vite.config.ts
visualisard/: package.json
visualiza-platform/: .env.example  docker-compose.yml
visualiza-platform/admin/: Dockerfile  nuxt.config.ts  package.json  tailwind.config.ts
visualiza-platform/backend/: Dockerfile  alembic.ini  pyproject.toml
visualiza-platform/backend/app/: celery_app.py  config.py  main.py
visualiza-platform/backend/app/api/: deps.py
visualiza-platform/backend/app/api/public/: router.py  widget_api.py
visualiza-platform/backend/app/api/v1/: bom.py
visualiza-platform/backend/app/core/: exceptions.py
visualiza-platform/backend/app/crawler/: __init__.py  aliss.py  ikea_dr.py  utils.py
visualiza-platform/backend/app/models/: base.py  billing.py  professional.py
visualiza-platform/backend/app/schemas/: __init__.py  billing.py  bom.py  common.py  product.py  widget.py
visualiza-platform/backend/app/services/: billing_service.py  product_service.py  widget_service.py
visualiza-platform/backend/scripts/: seed_data.py
visualiza-platform/backend/tests/: conftest.py  test_auth.py  test_billing.py  test_crawler.py  test_widget.py
visualiza-platform/portal/: Dockerfile  nuxt.config.ts  package.json
visualiza-platform/widget/: package.json  vite.config.ts
visualizard/: README.md  metadata.json
(+130 files in other folders)
